# agentic-patterns

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  RESULTS.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  pattern_request.md
.github/workflows/: ci.yml
agentic_patterns/: __init__.py
agentic_patterns/core/: __init__.py  config.py  embeddings.py  providers.py  tools.py  types.py
benchmarks/: __init__.py  bench_evaluation.py  bench_rag.py  bench_react.py  bench_reflection.py  bench_routing.py  harness.py  run_all.py
benchmarks/results/: SUMMARY.md  bench_evaluation.json  bench_rag.json  bench_react.json  bench_reflection.json  routing.json
patterns/: __init__.py
patterns/evaluation/: README.md  __init__.py  aggregate.py  ensemble.py  eval_set.py  exact.py  leakage.py  main.py  meta.py  pairwise.py  pointwise.py  process_reward.py  regression.py  selective.py  semantic.py  trajectory.py  validation_protocol.py  verdict.py
patterns/guardrails/: README.md  __init__.py  architecture.py  core.py  design_patterns.py  dual_llm.py  groundedness.py  injection_suite.py  input_guards.py  main.py  output_guards.py  pii.py  pipeline.py  policy_engine.py  pretool_guard.py  reasoning_auditor.py  retrieval_guard.py  scenarios.py
patterns/human_in_the_loop/: README.md  __init__.py  approval_gate.py  approval_memory.py  batched.py  capacity.py  escalation.py  fake_tools.py  gate.py  interactive.py  interrupt.py  main.py  mandatory_oversight.py  plan_review.py  post_hoc.py  resume.py  risk_classifier.py  risk_tier.py  transcript.py
patterns/mcp/: README.md  __init__.py  bridge.py  client.py  discovery.py  elicitation.py  http_transport.py  integrity.py  jsonrpc.py  main.py  multi_server.py  sampling.py  server.py  server_data.py  stateless.py  tasks.py  transport.py
patterns/memory/: README.md  __init__.py  assembler.py  episodic.py  file_memory.py  forgetting.py  main.py  mem0_update.py  memgpt.py  memory_bench.py  memory_tools.py  procedural.py  retrieval.py  semantic.py  short_term.py  sleep_time.py  vector_store.py  write_policy.py
patterns/multi_agent/: README.md  __init__.py  agent_card.py  aggregation.py  debate.py  economics.py  failure_attribution.py  group_chat.py  handoff.py  hierarchical.py  magentic.py  main.py  maker_checker.py  state.py  supervisor.py  worker.py
patterns/planning/: README.md  __init__.py  context_offload.py  dag_executor.py  (+17 more)
tests/: test_core.py  test_entrypoints.py  test_evaluation.py  test_guardrails.py  test_human_in_the_loop.py  test_mcp.py  test_memory.py  test_multi_agent.py  test_planning.py  test_rag.py  test_react.py  test_reflection.py  test_routing.py  test_tool_use.py
tools/: record_demos.py
(+96 files in other folders)
