[project]
name = "agentic-patterns"
version = "0.1.0"
description = "Core agentic AI patterns as small, runnable, tested examples"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sarthak Bhardwaj", email = "sarthak.bhardwaj21b@iiitg.ac.in" }]
keywords = ["agents", "llm", "react", "rag", "mcp", "patterns"]

# The mock provider and every example run on the standard library alone.
# Real API providers need httpx; install with: pip install -e ".[providers]"
dependencies = []

[project.optional-dependencies]
providers = ["httpx>=0.27"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.urls]
Repository = "https://github.com/SarthakB11/agentic-patterns"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentic_patterns*"]
